This file describes changes in the AutoDoc package.

TODO
  - Remove undocumented and long-unused support entities specified using a raw
    `<!ENTITY NAME CONTENT>` entity string

2019.07.17
  - Fix bug in extract_examples option that could result in invalid .tst files

2019.07.03
  - Make Chunks compatible with GAPDoc chunks
  - Tweak two error messages, add two more error checks
  - Check that gapdoc.files is a list of strings
  - Add @GroupTitle command (thanks to Glen Whitney)
  - Make @Begin.../@EndExampleSession respect plain_text_mode (thanks to Glen Whitney)
  - Handle documentation of DeclareCategoryCollection declarations (thanks to Glen Whitney)
  - Repair minor omissions/imprecisions in AutoDoc() function doc (thanks to Glen Whitney)
  - Improve manual further

2019.05.20
  - Ensure that starting a "manpage" (= documentation for a filter, function, property,
    ...) ends any active subsection (in GAPDoc, manpages are equivalent to subsections
    internally, and hence cannot be nested in each other)
  - Add deprecation warnings for @InsertSystem, @System, @BeginSystem, @EndSystem
    (use @Chunk etc. instead), and also @EndSection, @EndSubsection
  - Rename scaffold.gapdoc_latex_options to gapdoc.LaTeXOptions. The old name is still
    supported, but triggers a deprecation warning.
  - Update copyright information and author's contact data
  - Minor fixes in the manual

2019.04.10
  - Add opt.extract_examples to AutoDoc function
  - Add @NotLatex command to complement @LatexOnly
  - Allow disabling title page creation, by teaching `AutoDoc()` to correctly
    handle `scaffold := rec( TitlePage := false )` instead of raising an error
  - When generating a manual title page, only include persons as authors
    for which IsAuthor is set to true in PackageInfo.g
  - Some improvements to the manual
  - Various internal changes

2019.02.22
  - Updated changes file

2019.02.21
  - Removed possibility to mark function arguments via curly braces, as {A},