@@ -3,6 +3,8 @@ This file describes changes in the AutoDoc package.
 TODO
   - Remove undocumented and long-unused support entities specified using a raw
     `<!ENTITY NAME CONTENT>` entity string
+  - Fix the &see; entity we always generate (for legacy support) to display
+    the correct output in LaTeX / PDF mode
 
 2019.07.17
   - Fix bug in extract_examples option that could result in invalid .tst files
